fixed spacing in event component

--- a/src/components/Hero/_hero.scss
+++ b/src/components/Hero/_hero.scss
@@ -11,6 +11,6 @@
 
     &__container {
         display: flex;
-        gap: 2rem;
+        gap: 6rem;
     }
 }
