--- a/src/components/Hero/components/_event.scss
+++ b/src/components/Hero/components/_event.scss
@@ -6,18 +6,18 @@
     align-items: center;
 
     &__title {
-        font-size: 4em;
+        font-size: 3rem;
         font-weight: 700;
         background-color: #f0ece5;
         color: $color-primary;
         border: 3px solid $color-white;
         border-radius: 20px;
-        // padding: 3rem 6rem;
+        padding: 1.5rem 2rem;
         margin-bottom: 3rem;
-        box-shadow: 5px 10px 20px rgba(255, 255, 255, 0.2);
+        box-shadow: 5px 10px 20px rgba(255, 255, 255, 0.4);
         width: 100%;
         text-align: center;
-        height: 13rem;
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -31,9 +31,9 @@
         color: $color-primary;
         border: 3px solid $color-white;
         border-radius: 20px;
-        padding: 3rem 6rem;
+        padding: 2rem 4rem;
         margin-bottom: 3rem;
-        box-shadow: 5px 10px 20px rgba(255, 255, 255, 0.2);
+        box-shadow: 5px 10px 20px rgba(255, 255, 255, 0.4);
         width: 100%;
         text-align: center;
         height: 100%;
